# DeepX

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  VERSIONING.MD  limine_bin  linker.ld  run.sh  sign.sh  update_limine.sh
.cargo/: config.toml
iso_root/boot/: kernel.elf  limine.conf
iso_root/boot/limine/: limine.conf
iso_root/initrd/: mountian.dxs
iso_root/initrd/table/: chari.txt
src/: main.rs
src/arch/: cpu.rs  gdt.rs  idt.rs  info.rs  mod.rs  pic.rs  tss.rs
src/arch/apic/: apic.rs  io.rs  local.rs  mod.rs
src/arch/timer/: lapic.rs  mod.rs  pit.rs  time.rs  tsc.rs
src/arch/x86/: cpu.rs  gdt.rs  idt.rs  info.rs  mod.rs
src/exec/: dxb.rs
src/kernel/: mod.rs
src/kernel/acpi/: mod.rs  rsdp.rs  tables.rs
src/kernel/boot/: mod.rs  phase_state.rs  welcome.rs
src/kernel/console/: console_base.rs  display_manager.rs  kernel_shell.rs  logger.rs  mod.rs  ring_buffer.rs  safe_console.rs
src/kernel/cpu/: mod.rs  per_cpu.rs
src/kernel/debug/: debug_panel.rs  mod.rs
src/kernel/drivers/: input.rs  keyboard.rs  mod.rs  rtc.rs
src/kernel/fs/: vfs.rs
src/kernel/lib/: commands.rs  debug.rs  mod.rs  panic.rs  scripting.rs  utils.rs
src/kernel/mem/: heap.rs  info.rs  mapper.rs  mod.rs  paging.rs  pmm.rs
src/kernel/process/: mod.rs  task.rs
src/kernel/sync/: spinlock.rs
src/kernel/systunnel/: dispatch.rs  frame.rs  (+4 more)
src/userspace/: Cargo.toml  linker.ld  x86_64-userspace.json
src/userspace/.cargo/: config.toml
src/userspace/installer/: installer.rs
src/userspace/os/: os_discovery.rs
src/userspace/recovery/: recovery_console.rs
(+12 files in other folders)
