[package]
name = "deepx_userspace"
version = "0.1.0"
edition = "2021"


[dependencies]

[[bin]]
name = "os_discovery"
path = "os/os_discovery.rs"

[[bin]]
name = "recovery_console"
path = "recovery/recovery_console.rs"

[[bin]]
name = "installer"
path = "installer/installer.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1       
debug = true            
incremental = false